--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/joi": "17.2.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "4.21.0",
+    "express": "^4.21.2",
     "express-async-errors": "3.1.1",
     "joi": "17.13.3",
     "reflect-metadata": "0.2.2",
@@ -27,14 +27,14 @@
     "bson": "6.8.0",
     "cross-env": "7.0.3",
     "jest": "29.7.0",
-    "mongoose": "8.6.2",
+    "mongoose": "^8.10.1",
     "supertest": "7.0.0",
     "testcontainers": "10.13.1",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "tsx": "4.19.1",
+    "tsx": "^4.19.3",
     "typescript": "5.6.2",
     "typescript-transform-paths": "3.5.1",
-    "vitest": "2.1.1"
+    "vitest": "^2.1.9"
   }
 }
